nagios-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: nagios
#   labels:
#     app: nagios
# spec:
#   ports:
#   - port: 80
#     targetPort: 80
#   selector:
#     app: nagios
#   type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: nagios
  labels:
    app: nagios
spec:
  type: NodePort
  ports:
    - port: 80          # Service port
      targetPort: 80    # Nagios container port
      protocol: TCP
      nodePort: 30080   # NodePort to expose
  selector:
    app: nagios
