nagios-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nagios-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nagios.local # Use a valid domain or IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nagios
            port:
              number: 80
