prometheus-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090

# apiVersion: v1
# kind: Service
# metadata:
#   name: nagios
#   labels:
#     app: nagios
# spec:
#   ports:
#   - port: 80
#     targetPort: 80
#   selector:
#     app: nagios
#   type: ClusterIP
